3.0a2

  - Fixed the README.txt example for defining the supervisor RPC
    interface in the configuration file.  Thanks to Drew Perttula.

  - Fixed a bug where process communication events would not have the
    proper payload if the payload data was very short.

3.0a1

  - Default config file comment documented 10 secs as default for
    'startsecs' value in process config, in reality it was 1 sec.
    Thanks to Christoph Zwerschke.

  - Make note of subprocess environment behavior in README.txt.
    Thanks to Christoph Zwerschke.

  - New "strip_ansi" config file option attempts to strip ANSI escape
    sequences from logs for smaller/more readable logs (submitted by
    Mike Naberezny).

  - The XML-RPC method supervisor.getVersion() has been renamed for 
    clarity to supervisor.getAPIVersion().  The old name is aliased 
    for compatibility but is deprecated and will be removed in a
    future version (Mike Naberezny).

  - Improved web interface styling (Mike Naberezny, Derek DeVries)

  - The XML-RPC method supervisor.startProcess() now checks that
    the file exists and is executable (Mike Naberezny).

  - Two environment variables, "SUPERVISOR_PROCESS_NAME" and
    "SUPERVISOR_PROCESS_GROUP" are set in the environment of child
    processes, representing the name of the process and group in
    supervisor's configuration.

  - Process state map change: a process may now move directly from the
    STARTING state to the STOPPING state (as a result of a stop
    request).

  - Behavior change: if 'autorestart' is true, even if a process exits
    with an "expected" exit code, it will still be restarted.  In the
    immediately prior release of supervisor, this was true anyway, and
    no one complained, so we're going to consider that the "officially
    correct" behavior from now on.

  - Supervisor now logs subprocess stdout and stderr independently.
    The old program config keys "logfile", "logfile_backups" and